objects/Strategic_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <formula>Text(Account_Name__r.Industry)</formula>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>associated account of strategic plan</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Plans</relationshipLabel>
        <relationshipName>Strategic_Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>The account number related to</description>
        <formula>Account_Name__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>auto prepopulated from Account, if there isn&apos;t one, user should look up one from Strategic plan.</description>
        <inlineHelpText>Producer from associated Account. Only allow to update from Account.</inlineHelpText>
        <label>Producer (Account)</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Producer_Account,Consultant_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Plans (Producer)</relationshipLabel>
        <relationshipName>Strategic_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Risk_Level__c</fullName>
        <description>The risk level for Account</description>
        <label>Account Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Stickiness__c</fullName>
        <formula>Account_Name__r.Account_Stickiness__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Stickiness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is plan active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advance_Of_Effective_Date__c</fullName>
        <formula>TEXT(FLOOR((Effective_Date__c - DATEVALUE(CreatedDate) ) / 30)) &amp; &quot; months and &quot; &amp; TEXT(MOD((Effective_Date__c - DATEVALUE(CreatedDate) ), 30)) &amp; &quot; days&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance Of Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attitude_Towards_Employees__c</fullName>
        <description>Captures the attitude towards employees of the Group Account related to the Strategic Plan</description>
        <label>Attitude Towards Employees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BCBS_Challenge_Threats__c</fullName>
        <description>HCSC weaknesses for a Group Account</description>
        <label>BCBS Challenge / Threats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BCBS_Strength_Opportunity__c</fullName>
        <description>HCSC strengths for a Group Account</description>
        <label>BCBS Strength / Opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_of_change__c</fullName>
        <label>Benefits of change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increase Membership</fullName>
                </value>
                <value>
                    <fullName>New Product Sale</fullName>
                </value>
                <value>
                    <fullName>Increase Revenue</fullName>
                </value>
                <value>
                    <fullName>Cost Control</fullName>
                </value>
                <value>
                    <fullName>Member Education</fullName>
                </value>
                <value>
                    <fullName>Provider Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Risks__c</fullName>
        <inlineHelpText>Are there known external factors that present risk to the client&apos;s current business environment? Are there known external factors that present risk to the client&apos;s growth strategy</inlineHelpText>
        <label>Business Risks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>Types of campaigns that are in progress or planned for a Group Account</description>
        <label>Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carrier_History__c</fullName>
        <description>Captures the carrier history of the Group Account related to the Strategic Plan</description>
        <label>Carrier History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Goals_and_Strategy__c</fullName>
        <description>Captures goals and strategy for the Group Account related to the Strategic Plan</description>
        <label>Client high level goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Industry_and_Market_Trends__c</fullName>
        <description>Captures the client industry and market trends for the Group Account related to the Strategic Plan</description>
        <label>Client Industry and Market Trends</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Longterm_Business_Goals__c</fullName>
        <inlineHelpText>What is our understanding of the clients current business environment? What is their business growth strategy for 12, 18, 36 months?</inlineHelpText>
        <label>Client&apos;s Long-Term Business Environment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_s_long_term_goals__c</fullName>
        <label>Client’s long term goals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Strategy</fullName>
                </value>
                <value>
                    <fullName>Product Strategy</fullName>
                </value>
                <value>
                    <fullName>Increase Provider Acessibility</fullName>
                </value>
                <value>
                    <fullName>Incentives/disincentives</fullName>
                </value>
                <value>
                    <fullName>Financial stability</fullName>
                </value>
                <value>
                    <fullName>Increase Productivity</fullName>
                </value>
                <value>
                    <fullName>Reduce employee absentiness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_s_short_term_goals__c</fullName>
        <label>Client’s short term goals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reduce Costs</fullName>
                </value>
                <value>
                    <fullName>Member Education</fullName>
                </value>
                <value>
                    <fullName>Communication Strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communications_and_Objectives__c</fullName>
        <description>Captures the Communications and Objectives for the Group Account related to the Strategic Plan</description>
        <label>Communications and Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <description>Reason for a Group Account to go out to bid and switch health insurance carriers</description>
        <label>Compelling Event</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is substage completed</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Strategy__c</fullName>
        <description>Captures the Strategy for engaging with the Consulant related to the Group Account associated with the Strategic Plan</description>
        <label>Consultant Strategy &amp; Tactics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Healthcare_Painpoints__c</fullName>
        <inlineHelpText>What painpoints exist with the current healthcare solution? Should include painpoints experienced with HCSC, another carrier or a consultant/producer?</inlineHelpText>
        <label>Current Healthcare Painpoints</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Year_Goals__c</fullName>
        <description>HCSC&apos;s goals for growing and retaining a Group Account</description>
        <label>Current Year Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_changes_or_issues__c</fullName>
        <label>Current changes or issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>New Client Contact</fullName>
                </value>
                <value>
                    <fullName>Vendor Change</fullName>
                </value>
                <value>
                    <fullName>Enrollment fluctuation</fullName>
                </value>
                <value>
                    <fullName>Communication method</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>The date this strategic plan was approved by the manager.</description>
        <inlineHelpText>This is the date the strategic plan was approved by the manager.</inlineHelpText>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_of_Change_in_Carrier__c</fullName>
        <description>Captures the driver of change in carrier of the Group Account related to the Strategic Plan</description>
        <label>Driver of Change in Carrier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drivers_of_change__c</fullName>
        <label>Drivers of change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Leadership Change</fullName>
                </value>
                <value>
                    <fullName>New Initiative</fullName>
                </value>
                <value>
                    <fullName>Union Negotiations</fullName>
                </value>
                <value>
                    <fullName>Loss of Grandfathered Status</fullName>
                </value>
                <value>
                    <fullName>Funding Changes</fullName>
                </value>
                <value>
                    <fullName>Government and State Regulations</fullName>
                </value>
                <value>
                    <fullName>Media Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>For existing Accounts, select the upcoming Renewal Date.
For new Accounts, select the Effective Date.</inlineHelpText>
        <label>Renewal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Benefits__c</fullName>
        <description>Captures the employee benefits of the Group Account related to the Strategic Plan</description>
        <label>Employee Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Growth_and_Training__c</fullName>
        <description>Captures the employee growth and training of the Group Account related to the Strategic Plan</description>
        <label>Employee Growth and Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Growth_and_Retention_Strategy__c</fullName>
        <description>Captures the Growth and Retention Strategy of the Group Account related to the Strategic Plan</description>
        <label>Growth and Retention Strategy &amp; Tactics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HCSC_Gaps_with_Healthcare_Painpoints__c</fullName>
        <inlineHelpText>What hurdles does HCSC need to overcome to meet client&apos;s healthcare vision? Examples can range from new products, enhanced features, enhanced networks, innovation, bundled pricing, etc</inlineHelpText>
        <label>HCSC Gaps with Healthcare Painpoints</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HCSC_State__c</fullName>
        <description>HCSC plan that owns or is pursuing a Group Account (IL, TX, OK, NM, MT)</description>
        <formula>IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;IL&quot;) ,  IMAGE(&quot;https://c.cs15.content.force.com/servlet/servlet.ImageServer?id=015e00000008RyT&amp;oid=00De0000005UsP5&amp;lastMod=1428905965000&quot;,&quot;White&quot;) ,  IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;TX&quot;), IMAGE(&quot;https://c.cs15.content.force.com/servlet/servlet.ImageServer?id=015e00000008RyY&amp;oid=00De0000005UsP5&amp;lastMod=1428906015000&quot;,&quot;White&quot;),  IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;OK&quot;), IMAGE(&quot;https://c.cs15.content.force.com/servlet/servlet.ImageServer?id=015e00000008Ryd&amp;oid=00De0000005UsP5&amp;lastMod=1428906070000&quot;,&quot;White&quot;),  IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;NM&quot;), IMAGE(&quot;https://c.cs15.content.force.com/servlet/servlet.ImageServer?id=015e00000008Ryi&amp;oid=00De0000005UsP5&amp;lastMod=1428906096000&quot;,&quot;White&quot;),  IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;MT&quot;), IMAGE(&quot;https://c.cs15.content.force.com/servlet/servlet.ImageServer?id=015e00000008Ryn&amp;oid=00De0000005UsP5&amp;lastMod=1428906119000&quot;,&quot;White&quot;), null) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCSC Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCSC_s_long_term_goals_for_the_client__c</fullName>
        <description>Captures HCSC’s long term goals for the Group Account related to the Strategic Plan</description>
        <label>HCSC’s long term goals for the client</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Achieve Performance Measurements</fullName>
                </value>
                <value>
                    <fullName>Control Costs</fullName>
                </value>
                <value>
                    <fullName>Network Solutions</fullName>
                </value>
                <value>
                    <fullName>Product Solutions</fullName>
                </value>
                <value>
                    <fullName>Minimize Carve Outs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_s_short_term_goals_for_the_client__c</fullName>
        <label>HCSC’s short term goals for the client</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Achieve Performance Measurements</fullName>
                </value>
                <value>
                    <fullName>Member Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_s_strengths_differentiators__c</fullName>
        <label>HCSC’s strengths / differentiators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Network Solutions</fullName>
                </value>
                <value>
                    <fullName>Product Solutions</fullName>
                </value>
                <value>
                    <fullName>Transprency Tools</fullName>
                </value>
                <value>
                    <fullName>Brand Recognition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_s_weaknesses_limitations__c</fullName>
        <label>HCSC’s weaknesses / limitations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Fees</fullName>
                </value>
                <value>
                    <fullName>Slow Product Roll out</fullName>
                </value>
                <value>
                    <fullName>Timely or Effective Communication</fullName>
                </value>
                <value>
                    <fullName>Unable to Deliver as Promised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immediate_need_to_know__c</fullName>
        <description>Immediate need to know information about the Account related to the Strategic Plan</description>
        <label>Immediate need to know</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent_Strength_and_Opportunity__c</fullName>
        <description>Strengths of a Group Account&apos;s current carrier</description>
        <label>Incumbent Strength and Opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent_Weaknesses_and_Threats__c</fullName>
        <description>Weaknesses of a Group Account&apos;s current carrier</description>
        <label>Incumbent Weaknesses and Threats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Insights__c</fullName>
        <label>Industry Insights</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Info_that_can_be_used_to_BCBS_advantage__c</fullName>
        <description>Captures info that can be used to BCBS advantage for the Group Account related to the Strategic Plan</description>
        <label>Info that can be used to BCBS advantage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Status_Quo_Acceptable_to_Client__c</fullName>
        <description>Captures if the status quo is acceptable to the Group Account related to the Strategic Plan</description>
        <label>Is Status Quo Acceptable to Client?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Differentiators_to_Competitors__c</fullName>
        <description>Captures key differentiators to competitors of the Group Account related to the Strategic Plan</description>
        <label>Key Differentiators to Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Focus_Areas_from_ESM__c</fullName>
        <label>Key Focus Areas from ESM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length_of_HCSC_relationship__c</fullName>
        <formula>IF( RecordType.DeveloperName  &lt;&gt; &apos;Prospect_Account_Plan&apos;, IF( ISBLANK(Account_Name__r.HCSC_Client_Since__c),&quot;&quot;,TEXT(ROUND(((TODAY()-Account_Name__r.HCSC_Client_Since__c) / 365),1)) &amp; &quot; years&quot;), &apos;-NA-&apos;)</formula>
        <label>Length of HCSC relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_relationship_with_HCSC__c</fullName>
        <description>Used to capture the relationship with HCSC for Group Prospect Accounts (a formula field is used for Group Accounts)</description>
        <label>Length of relationship with HCSC</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>Stores logo file reference for Opportunity Plan document</description>
        <formula>IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;IL&quot;) , IMAGE( $Label.BCBS_IL_LOGO ,&quot;White&quot;) , IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;TX&quot;), IMAGE( $Label.BCBS_TX_LOGO ,&quot;White&quot;), IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;OK&quot;), IMAGE( $Label.BCBS_OK_LOGO ,&quot;White&quot;), IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;NM&quot;), IMAGE( $Label.BCBS_NM_LOGO ,&quot;White&quot;), IF(ISPICKVAL( Account_Name__r.HCSC_Division__c , &quot;MT&quot;), IMAGE( $Label.BCBS_MT_LOGO ,&quot;White&quot;), null) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCSC Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Plan Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Cost_Drivers__c</fullName>
        <description>Captures medical cost drivers of the Group Account related to the Strategic Plan</description>
        <label>Medical Cost Drivers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_HCSC_long_term_goals_for_client__c</fullName>
        <label>Other HCSC long term goals for client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_HCSC_s_strengths_differentiators__c</fullName>
        <label>Other HCSC’s strengths / differentiators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_HCSC_s_weaknesses_limitations__c</fullName>
        <label>Other HCSC’s weaknesses / limitations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_HCSC_short_term_goal_s_for_client__c</fullName>
        <label>Other HCSC short term goal(s) for client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_benefits_of_change__c</fullName>
        <label>Other benefits of change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_client_long_term_goals__c</fullName>
        <label>Other client long term goals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_current_changes_or_issues__c</fullName>
        <label>Other current changes or issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_drivers_of_change__c</fullName>
        <label>Other drivers of change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_risks_of_Change__c</fullName>
        <label>Other risks of Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_short_term_goal_s__c</fullName>
        <label>Other short-term goal(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_what_it_will_take_to_win__c</fullName>
        <label>Other what it will take to win</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Strategy_Response2__c</fullName>
        <description>Captures strategy response #2 for the Group Account related to the Strategic Plan</description>
        <label>Our Strategy / Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Our_Strategy_Response3__c</fullName>
        <description>Captures strategy response #3 for the Group Account related to the Strategic Plan</description>
        <label>Our Strategy / Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Our_Strategy_Response4__c</fullName>
        <description>Captures strategy response #4 for the Group Account related to the Strategic Plan</description>
        <label>Our Strategy / Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Philanthropic_Activities__c</fullName>
        <description>Captures the philanthropic activites of the Group Account related to the Strategic Plan</description>
        <label>Philanthropic Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_for_use_of_Client_Analytics__c</fullName>
        <description>Captures how will you use client analytics to better drive value</description>
        <label>Plan for use of Client Analytics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_to_Pursue_Carve_Out__c</fullName>
        <description>HCSC&apos;s plan to go after business that a Group Account currently carves out to a different vendor (e.g., RX, Dental, Life)</description>
        <label>Plan to Pursue Carve Out</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Obstacles__c</fullName>
        <description>Captures the Potential threats to the relationship with the Group Account related to the Strategic Plan</description>
        <label>Potential threats to relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_ESM_Personality_Type__c</fullName>
        <description>Captures Primary ESM Personality Type related to the Strategic Plan</description>
        <label>Primary ESM Personality Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All-Inclusive</fullName>
                </value>
                <value>
                    <fullName>Network Focused</fullName>
                </value>
                <value>
                    <fullName>Product Oriented</fullName>
                </value>
                <value>
                    <fullName>Price Sensitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_ESM_Personality__c</fullName>
        <label>Primary ESM Personality %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priorities_and_agendas__c</fullName>
        <description>This field is used to capture priorities and agendas of key stakeholders and decision makers</description>
        <label>Priorities / agendas of key stakeholders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Priority__c</fullName>
        <label>Product Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                    <default>true</default>
                    <label>Medical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Product_Service_Description__c</fullName>
        <description>Description of what value and benefits HCSC can offer to a Group Account</description>
        <label>Proposed Product / Service Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_solution__c</fullName>
        <label>Proposed solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Key_Concerns__c</fullName>
        <description>Captures the Key Concerns of the Group Prospect Account related to the Strategic Plan</description>
        <label>Prospect Key Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_perception_of_BCBS__c</fullName>
        <description>Captures the relationship that HCSC has with the Group Account related to the Strategic Plan</description>
        <label>Relationship with HCSC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate_History__c</fullName>
        <description>Captures overview of historic rate changes for the Group Account associated with the Strategic Plan</description>
        <label>Overview of historic rate changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_why_proposed_solution_is_the_best__c</fullName>
        <label>Reason why proposed solution is the best</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Concerns_Issues__c</fullName>
        <description>Captures renewal concerns and issues of the Group Account related to the Strategic Plan</description>
        <label>Renewal Concerns / Issues &amp; Tactics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Reason__c</fullName>
        <description>Captures rationale of Risk Rating given to the acount</description>
        <label>Risk Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risks_And_Benefits_Of_Changing_Carriers__c</fullName>
        <description>Captures the risks and benefits of changing carriers for the Group Account related to the Strategic Plan</description>
        <label>Risks And Benefits Of Changing Carriers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risks_of_Change__c</fullName>
        <label>Risks of Change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decrease Membership</fullName>
                </value>
                <value>
                    <fullName>Unable to Deliver as Promised</fullName>
                </value>
                <value>
                    <fullName>Client Dissatisfaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <formula>Account_Name__r.Sic</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_ESM_Personality_Type__c</fullName>
        <label>Secondary ESM Personality Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All-Inclusive</fullName>
                </value>
                <value>
                    <fullName>Network Focused</fullName>
                </value>
                <value>
                    <fullName>Product Oriented</fullName>
                </value>
                <value>
                    <fullName>Price Sensitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_ESM_Personality__c</fullName>
        <label>Secondary ESM Personality %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strategic_Plan_Name_URL__c</fullName>
        <formula>HYPERLINK(&quot;/apex/NewStrategicPlanLayout?id=&quot;&amp;Id , Name ,&apos;_self&apos;)</formula>
        <label>Strategic Plan Link (Consolidated View)</label>
        <type>Text</type>
    </fields>
</CustomObject>